syntax = "proto3";

option java_package = "enchantedtowers.common.utils.proto.requests";
option java_multiple_files = true;

package request_models;

import "common/point.proto";

message PlayerCoordinatesRequest {
  common_models.Point location = 1;
};
